[package]
name = "serde-hashkey"
version = "0.4.1"
authors = ["John-John Tedro"]
repository = "https://github.com/udoprog/serde-hashkey"
readme = "README.md"
license = "MIT/Apache-2.0"
description = """
Space efficient, in-memory serde serialization which supports hashing.
"""
keywords = ["serde", "serialization"]
categories = ["encoding"]
edition = "2018"

[features]
default = []
ordered-float = ["ordered-float3", "num-traits02"]

[dependencies]
serde = "1.0.117"
ordered-float3 = { package = "ordered-float", version = "3.0.0", optional = true }
num-traits02 = { package = "num-traits", version = "0.2.1", optional = true }

[dev-dependencies]
serde_json = "1.0.59"
serde_derive = "1.0.117"

[package.metadata.docs.rs]
all-features = true
