[package]
name = "serde-hashkey"
version = "0.4.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "Space efficient, in-memory serde serialization which supports hashing."
documentation = "https://docs.rs/serde-hashkey"
readme = "README.md"
homepage = "https://github.com/udoprog/serde-hashkey"
repository = "https://github.com/udoprog/serde-hashkey"
license = "MIT/Apache-2.0"
keywords = ["serde", "serialization"]
categories = ["encoding"]

[features]
default = []
ordered-float = ["ordered-float3", "num-traits02"]

[dependencies]
serde = "1.0.117"
ordered-float3 = { package = "ordered-float", version = "3.0.0", optional = true }
num-traits02 = { package = "num-traits", version = "0.2.1", optional = true }

[dev-dependencies]
serde_json = "1.0.59"
serde_derive = "1.0.117"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
